[tool.poetry]
name = "pythonic-garage-band"
version = "0.1.0"
description = ""
authors = ["santorsm <matt.santorsola@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.6b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
